Fixes #20 (Now buttons be still visible but disabled, rather than invisible)

--- a/src/main/resources/WebContent/css/lightbox.css
+++ b/src/main/resources/WebContent/css/lightbox.css
@@ -1,28 +1,28 @@
 #lightbox {
-	position: fixed;
-	top: 0px;
-	z-index: 100;
+    position: fixed;
+    top: 0px;
+    z-index: 100;
 }
 
 #lightbox #lightbox_window {
-	position: fixed;
-	top: 10%;
-	/*left: 10%*/;
-	max-width: 80%;
-	z-index: 110;
+    position: fixed;
+    top: 10%;
+    /*left: 10%*/;
+    max-width: 80%;
+    z-index: 110;
 
-	transition: all 0.3s;
-	box-shadow: 0px 0px 15px 0px black;
-	border-radius: 3px;
+    transition: all 0.3s;
+    box-shadow: 0px 0px 15px 0px black;
+    border-radius: 3px;
 }
 
 #lightbox #lightbox_window img {
-	transition: all 0.3s;
-	border-radius: 3px;
+    transition: all 0.3s;
+    border-radius: 3px;
 }
 
 .picture_position {
-	position: absolute;
+    position: absolute;
     right: 5px;
     top: -20px;
     opacity: 0.4;
@@ -41,13 +41,21 @@
     margin: 6px 10px;
     padding: 15px !important;
 
-	color: #fff;
+    color: #fff;
     content: '\00D7';
     opacity: 0.6 !important;
     transition: all 0.3s;
 }
 
 .close:focus, .close:hover {
-	color: #fff !important;
+    color: #fff !important;
     opacity: 1 !important;
+}
+
+button:hover[disabled] {
+    cursor: not-allowed;
+}
+
+button.close[disabled] {
+    opacity: 0.3 !important;
 }
